# 2020_AOC

./: .gitignore  README.md  pyproject.toml  setup.cfg
.aocpy/: solution.py  test_solution.py
01/: solution.py
02/: solution.py
03/: solution.py
04/: solution.py  solution_pydantic.py
05/: solution.py
06/: solution.py
07/: solution.py
08/: func_machine.py  machine.py  solution.py  test_day08.py
09/: solution.py  test_day09.py
10/: solution.py  test_day10.py
11/: solution.py  test_day11.py
12/: solution.py  test_day12.py
13/: solution.py  test_day13.py
14/: solution.py  test_day14.py
15/: solution.py  test_day15.py
16/: solution.py  test_day16.py  test_input.txt
17/: solution.py  test_day17.py
18/: interpreter.py  solution.py  test_day18.py
19/: call_stack.py  solution.py  solution_backup.py  solution_hints.py  test_day19.py
20/: gui.py  solution.py  test_day20.py
21/: solution.py  test_day21.py
22/: solution.py  test_day22.py
23/: cups.py  solution.py  solution_b.py  test_day23.py
24/: solution.py  test_day24.py  tiles.py
25/: solution.py  test_day25.py
d01/: test_d01.py
utils/: directions.py  gui.py  path.py  vector.py
